<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_PMLControl_Simplified" Id="{8b696aa5-3c11-4027-9a46-563f5114abac}">
    <Declaration><![CDATA[TYPE ST_PMLControl_Simplified :
    STRUCT
        bConfirmation : BOOL;

        bClearEnabled : BOOL;
        bResetEnabled : BOOL;
        bStartEnabled : BOOL;
        bStopEnabled  : BOOL;

        bClearPressed : BOOL;
        bResetPressed : BOOL;
        bStartPressed : BOOL;
        bStopPressed  : BOOL;
    END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>